<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Escribime!</string>
    <string name="app_name">Escribime</string>
<string name="app_prefs">Escribime Preferences</string>
<string name="emailPref">emailPref</string>
<string name="passwordPref">passwordPref</string>
<string name="labelPref">labelPref</string>
<string name="intervalPref">intervalPref</string>
<string-array name="Intervals"><item>30 seconds</item>
<item>60 seconds</item>
<item>2 minutes</item>
<item>5 minutes</item>
</string-array>

<string-array name="IntervalValues"><item>30</item>
<item>60</item>
<item>120</item>
<item>300</item>
</string-array>
<string name="startPref">startPref</string>
<string name="vibratePref">vibratePref</string>
</resources>
